--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,11 +13,11 @@
       <a class="sidebar-nav-item{% if page.url == '/syllabus/' %} active{% endif %}" href="{{ site.baseurl }}/syllabus"><i class="fa fa-bullhorn fa-fw"></i> Syllabus</a>
       <a class="sidebar-nav-item{% if page.url == '/schedule/' %} active{% endif %}" href="{{ site.baseurl }}/schedule"><i class="fa fa-calendar fa-fw"></i> Schedule</a>
       <p hidden><a class="sidebar-nav-item{% if page.url == '/nav/course-materials/' %} active{% endif %}" href="{{ site.baseurl }}/nav/course-materials"><i class="fa fa-briefcase fa-fw"></i> Course Materials</a></p>
-      <a href="https://canvas.uw.edu/courses/1131545"><i class="fa fa-briefcase fa-fw"></i> Canvas</a>
+      <a href="https://canvas.uw.edu/courses/1273428"><i class="fa fa-briefcase fa-fw"></i> Canvas</a>
       <br>
-      <a href="https://course-fish497-safs.slack.com"><i class="fa fa-user fa-fw"></i> Slack</a>
+      <p hidden><a href="https://course-fish497-safs.slack.com"><i class="fa fa-user fa-fw"></i> Slack</a>
       <br>
-      <p hidden><a href="https://uw.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=6d1c3808-606e-4890-8156-a876015a07f5"><i class="fa fa-magic fa-fw"></i> Panopto</a></p>
+      <a href="https://uw.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=6d1c3808-606e-4890-8156-a876015a07f5"><i class="fa fa-magic fa-fw"></i> Panopto</a></p>
       <br>
       <a href="https://github.com/sr320/course-fish497-2018/wiki"><i class="fa fa-book fa-fw"></i> Cheatsheet</a>
     </nav>
