added discussion link

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,9 +15,9 @@
       <p hidden><a class="sidebar-nav-item{% if page.url == '/nav/course-materials/' %} active{% endif %}" href="{{ site.baseurl }}/nav/course-materials"><i class="fa fa-briefcase fa-fw"></i> Course Materials</a></p>
       <a href="https://canvas.uw.edu/courses/1273428"><i class="fa fa-briefcase fa-fw"></i> Canvas</a>
       <br>
-      <p hidden><a href="https://course-fish497-safs.slack.com"><i class="fa fa-user fa-fw"></i> Slack</a>
+      <a href="https://canvas.uw.edu/courses/1273428/discussion_topics"><i class="fa fa-user fa-fw"></i> Discussions</a>
       <br>
-      <a href="https://uw.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=6d1c3808-606e-4890-8156-a876015a07f5"><i class="fa fa-magic fa-fw"></i> Panopto</a></p>
+      <p hidden><a href="https://uw.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=6d1c3808-606e-4890-8156-a876015a07f5"><i class="fa fa-magic fa-fw"></i> Panopto</a></p>
       <br>
       <a href="https://github.com/sr320/course-fish497-2018/wiki"><i class="fa fa-book fa-fw"></i> Cheatsheet</a>
     </nav>
