--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,7 @@
       <br>
       <p hidden><a href="https://uw.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=6d1c3808-606e-4890-8156-a876015a07f5"><i class="fa fa-magic fa-fw"></i> Panopto</a></p>
       <br>
-      <a href="https://github.com/sr320/course-fish497-2018/wiki"><i class="fa fa-book fa-fw"></i> Cheatsheet</a>
+      <a href="https://www.rstudio.com/resources/cheatsheets"><i class="fa fa-book fa-fw"></i> Cheatsheets</a>
     </nav>
 
     <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="{{ site.baseurl }}/public/cc-by-80x15.png" /></a></p>
